--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Notis Scraping Dashboard",
-  "name": "Notis Scraping Dashboard",
+  "short_name": "Admin Dashboard",
+  "name": "Admin Dashboard",
   "icons": [
     {
       "src": "favicon.ico",
